add single page

--- a/index.html
+++ b/index.html
@@ -77,63 +77,63 @@
 						            <li class="nav-item dropdown">
 						                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Profil <b class="caret"></b></a> 
 							          <ul class="dropdown-menu">
-							            <li class="nav-item-dropdown"><a href="#">Sejarah</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Visi Misi</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Struktur Organisasi</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Selayang Padang Formadiksi UM 2018</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Sejarah</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Visi Misi</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Struktur Organisasi</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Selayang Padang Formadiksi UM 2018</a></li>
 							          </ul>
 						            </li>
 						            <li class="nav-item dropdown">
 						                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Informasi <b class="caret"></b></a> 
 							          <ul class="dropdown-menu">
-							            <li class="nav-item-dropdown"><a href="#">Program Kerja Formadiksi UM 2018</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Kaleidoskop Kegiatan Formadiksi UM Tahun 2018</a></li>
-							            <li class="nav-item-dropdown"><a href="#">FAQ</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Buku Panduan Donasi 1% Periode 2019</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Data Prestasi Mahasiswa Bidikmisi Universitas Negeri Malang 2019</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Kebidikmisian</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Akademik dan Umum</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Lowongan Pekerjaan</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Lomba-Lomba</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Alur Kerjasama Media Partner Formadiksi UM</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Program Kerja Formadiksi UM 2018</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Kaleidoskop Kegiatan Formadiksi UM Tahun 2018</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">FAQ</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Buku Panduan Donasi 1% Periode 2019</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Data Prestasi Mahasiswa Bidikmisi Universitas Negeri Malang 2019</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Kebidikmisian</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Akademik dan Umum</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Lowongan Pekerjaan</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Lomba-Lomba</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Alur Kerjasama Media Partner Formadiksi UM</a></li>
 							          </ul>
 						            </li>
 						            <li class="nav-item dropdown">
 						                <!-- <a class="nav-link" href="#">Profil</a> -->
 						                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Divisi-Divisi <b class="caret"></b></a> 
 							          <ul class="dropdown-menu">
-							            <li class="nav-item-dropdown"><a href="#">Pengurus Inti</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Dewan Pertimbangan</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Divisi Jurnalistik</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Divisi Advokasi dan Kesejahteraan Mahasiswa</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Divisi Keilmuwan dan Pengabdian</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Divisi Minat dan Bakat</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Divisi Informasi dan Komunikasi</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Divisi Dana dan Usaha</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Divisi Hubungan Internal Mahasiswa</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Divisi Pengembangan Sumber Daya Manusia</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Pengurus Inti</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Dewan Pertimbangan</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Divisi Jurnalistik</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Divisi Advokasi dan Kesejahteraan Mahasiswa</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Divisi Keilmuwan dan Pengabdian</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Divisi Minat dan Bakat</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Divisi Informasi dan Komunikasi</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Divisi Dana dan Usaha</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Divisi Hubungan Internal Mahasiswa</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Divisi Pengembangan Sumber Daya Manusia</a></li>
 							          </ul>
 						            </li>
 						            <li class="nav-item dropdown">
 						                <!-- <a class="nav-link" href="#">Profil</a> -->
 						                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Ruang Estetika <b class="caret"></b></a> 
 							          <ul class="dropdown-menu">
-							            <li class="nav-item-dropdown"><a href="#">Kisah Inspiratif Mahasiswa Bidikmisi Universitas Negeri Malang</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Bidikmisi Menginspirasi</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Video</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Musik</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Karya Mahasiswa Bidikmisi</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Majalah Impresif</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Kisah Inspiratif Mahasiswa Bidikmisi Universitas Negeri Malang</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Bidikmisi Menginspirasi</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Video</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Musik</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Karya Mahasiswa Bidikmisi</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Majalah Impresif</a></li>
 							          </ul>
 						            </li>
 						            <li class="nav-item dropdown">
 						                <!-- <a class="nav-link" href="#">Profil</a> -->
 						                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Sistem Informasi Formadiksi UM <b class="caret"></b></a> 
 							          <ul class="dropdown-menu">
-							            <li class="nav-item-dropdown"><a href="#">Sistem Perizinan Pengurus Formadiksi UM 2019</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Sistem Informasi dan Registrasi Kepanitian Formadiksi UM</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Sistem Informasi dan Kepesertaan Kegiatan Formadiksi UM</a></li>
-							            <li class="nav-item-dropdown"><a href="#">Cek Pengumuman</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Sistem Perizinan Pengurus Formadiksi UM 2019</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Sistem Informasi dan Registrasi Kepanitian Formadiksi UM</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Sistem Informasi dan Kepesertaan Kegiatan Formadiksi UM</a></li>
+							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Cek Pengumuman</a></li>
 							          </ul>
 						            </li>
 						        </ul>
