add sejarah, struktur, visi

--- a/single.html
+++ b/single.html
@@ -72,68 +72,68 @@
 						    <div class="navbar-collapse collapse w-100 dual-collapse2 order-2 order-md-2">
 						        <ul class="navbar-nav mr-auto text-center text-uppercase">
 						            <li class="nav-item">
-						                <a class="nav-link" href="#">Home</a>
+						                <a class="nav-link" href="index.html">Home</a>
 						            </li>
 						            <li class="nav-item dropdown">
 						                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Profil <b class="caret"></b></a> 
 							          <ul class="dropdown-menu">
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Sejarah</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Visi Misi</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Struktur Organisasi</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Selayang Padang Formadiksi UM 2018</a></li>
+							            <li class="nav-item-dropdown"><a href="sejarah.html" class="nav-dropdown-link">Sejarah</a></li>
+							            <li class="nav-item-dropdown"><a href="visi-misi.html" class="nav-dropdown-link">Visi Misi</a></li>
+							            <li class="nav-item-dropdown"><a href="struktur.html" class="nav-dropdown-link">Struktur Organisasi</a></li>
+							            <li class="nav-item-dropdown"><a href="selayang.html" class="nav-dropdown-link">Selayang Padang Formadiksi UM 2018</a></li>
 							          </ul>
 						            </li>
 						            <li class="nav-item dropdown">
 						                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Informasi <b class="caret"></b></a> 
 							          <ul class="dropdown-menu">
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Program Kerja Formadiksi UM 2018</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Kaleidoskop Kegiatan Formadiksi UM Tahun 2018</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">FAQ</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Buku Panduan Donasi 1% Periode 2019</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Data Prestasi Mahasiswa Bidikmisi Universitas Negeri Malang 2019</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Kebidikmisian</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Akademik dan Umum</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Lowongan Pekerjaan</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Lomba-Lomba</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Alur Kerjasama Media Partner Formadiksi UM</a></li>
+							            <li class="nav-item-dropdown"><a href="proker.html" class="nav-dropdown-link">Program Kerja Formadiksi UM 2018</a></li>
+							            <li class="nav-item-dropdown"><a href="kaleidoskop.html" class="nav-dropdown-link">Kaleidoskop Kegiatan Formadiksi UM Tahun 2018</a></li>
+							            <li class="nav-item-dropdown"><a href="faq.html" class="nav-dropdown-link">FAQ</a></li>
+							            <li class="nav-item-dropdown"><a href="donasi.html" class="nav-dropdown-link">Buku Panduan Donasi 1% Periode 2019</a></li>
+							            <li class="nav-item-dropdown"><a href="prestasi.html" class="nav-dropdown-link">Data Prestasi Mahasiswa Bidikmisi Universitas Negeri Malang 2019</a></li>
+							            <li class="nav-item-dropdown"><a href="kebidikmisian.html" class="nav-dropdown-link">Kebidikmisian</a></li>
+							            <li class="nav-item-dropdown"><a href="akademik.html" class="nav-dropdown-link">Akademik dan Umum</a></li>
+							            <li class="nav-item-dropdown"><a href="loker-pekerjaan.html" class="nav-dropdown-link">Lowongan Pekerjaan</a></li>
+							            <li class="nav-item-dropdown"><a href="lomba.html" class="nav-dropdown-link">Lomba-Lomba</a></li>
+							            <li class="nav-item-dropdown"><a href="alur-kerjasama.html" class="nav-dropdown-link">Alur Kerjasama Media Partner Formadiksi UM</a></li>
 							          </ul>
 						            </li>
 						            <li class="nav-item dropdown">
 						                <!-- <a class="nav-link" href="#">Profil</a> -->
 						                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Divisi-Divisi <b class="caret"></b></a> 
 							          <ul class="dropdown-menu">
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Pengurus Inti</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Dewan Pertimbangan</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Divisi Jurnalistik</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Divisi Advokasi dan Kesejahteraan Mahasiswa</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Divisi Keilmuwan dan Pengabdian</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Divisi Minat dan Bakat</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Divisi Informasi dan Komunikasi</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Divisi Dana dan Usaha</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Divisi Hubungan Internal Mahasiswa</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Divisi Pengembangan Sumber Daya Manusia</a></li>
+							            <li class="nav-item-dropdown"><a href="pengurus.html" class="nav-dropdown-link">Pengurus Inti</a></li>
+							            <li class="nav-item-dropdown"><a href="pertimbangan.html" class="nav-dropdown-link">Dewan Pertimbangan</a></li>
+							            <li class="nav-item-dropdown"><a href="div-jurnal.html" class="nav-dropdown-link">Divisi Jurnalistik</a></li>
+							            <li class="nav-item-dropdown"><a href="div-advokasi.html" class="nav-dropdown-link">Divisi Advokasi dan Kesejahteraan Mahasiswa</a></li>
+							            <li class="nav-item-dropdown"><a href="div-keilmuwan.html" class="nav-dropdown-link">Divisi Keilmuwan dan Pengabdian</a></li>
+							            <li class="nav-item-dropdown"><a href="div-minat-bakat.html" class="nav-dropdown-link">Divisi Minat dan Bakat</a></li>
+							            <li class="nav-item-dropdown"><a href="div-informasi.html" class="nav-dropdown-link">Divisi Informasi dan Komunikasi</a></li>
+							            <li class="nav-item-dropdown"><a href="div-dana.html" class="nav-dropdown-link">Divisi Dana dan Usaha</a></li>
+							            <li class="nav-item-dropdown"><a href="div-hubungan.html" class="nav-dropdown-link">Divisi Hubungan Internal Mahasiswa</a></li>
+							            <li class="nav-item-dropdown"><a href="div-pengembangan.html" class="nav-dropdown-link">Divisi Pengembangan Sumber Daya Manusia</a></li>
 							          </ul>
 						            </li>
 						            <li class="nav-item dropdown">
 						                <!-- <a class="nav-link" href="#">Profil</a> -->
 						                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Ruang Estetika <b class="caret"></b></a> 
 							          <ul class="dropdown-menu">
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Kisah Inspiratif Mahasiswa Bidikmisi Universitas Negeri Malang</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Bidikmisi Menginspirasi</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Video</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Musik</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Karya Mahasiswa Bidikmisi</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Majalah Impresif</a></li>
+							            <li class="nav-item-dropdown"><a href="kisah-inspiratif.html" class="nav-dropdown-link">Kisah Inspiratif Mahasiswa Bidikmisi Universitas Negeri Malang</a></li>
+							            <li class="nav-item-dropdown"><a href="bidikmisi.html" class="nav-dropdown-link">Bidikmisi Menginspirasi</a></li>
+							            <li class="nav-item-dropdown"><a href="video.html" class="nav-dropdown-link">Video</a></li>
+							            <li class="nav-item-dropdown"><a href="musik.html" class="nav-dropdown-link">Musik</a></li>
+							            <li class="nav-item-dropdown"><a href="karya.html" class="nav-dropdown-link">Karya Mahasiswa Bidikmisi</a></li>
+							            <li class="nav-item-dropdown"><a href="majalah.html" class="nav-dropdown-link">Majalah Impresif</a></li>
 							          </ul>
 						            </li>
 						            <li class="nav-item dropdown">
 						                <!-- <a class="nav-link" href="#">Profil</a> -->
 						                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Sistem Informasi Formadiksi UM <b class="caret"></b></a> 
 							          <ul class="dropdown-menu">
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Sistem Perizinan Pengurus Formadiksi UM 2019</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Sistem Informasi dan Registrasi Kepanitian Formadiksi UM</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Sistem Informasi dan Kepesertaan Kegiatan Formadiksi UM</a></li>
-							            <li class="nav-item-dropdown"><a href="#" class="nav-dropdown-link">Cek Pengumuman</a></li>
+							            <li class="nav-item-dropdown"><a href="sistem-izin.html" class="nav-dropdown-link">Sistem Perizinan Pengurus Formadiksi UM 2019</a></li>
+							            <li class="nav-item-dropdown"><a href="sistem-registrasi.html" class="nav-dropdown-link">Sistem Informasi dan Registrasi Kepanitian Formadiksi UM</a></li>
+							            <li class="nav-item-dropdown"><a href="sistem-kepersertaan.html" class="nav-dropdown-link">Sistem Informasi dan Kepesertaan Kegiatan Formadiksi UM</a></li>
+							            <li class="nav-item-dropdown"><a href="pengumuman.html" class="nav-dropdown-link">Cek Pengumuman</a></li>
 							          </ul>
 						            </li>
 						        </ul>
